src/objects/Student_Profile_Term__c.object
<CustomObject><fields>
        <fullName>Current_Term__c</fullName>
        <description>Current STRM value for Student Profile</description>
        <label>Current Term</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Next_Term_Name__c</fullName>
        <description>Descriptive name for the next term.</description>
        <label>Next Term Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Next_Term__c</fullName>
        <description>Next STRM value for Student Profile</description>
        <label>Next Term</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Current term and next term for Student Profile</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Student Profile Term</label><nameField>
        <label>Current Term Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Student Profile Terms</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_Term__c</columns>
        <columns>Next_Term__c</columns>
        <columns>Next_Term_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>